--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=1980, initial-scale=1.0">
     <title>MastersuppVt</title>
     <link rel="icon" href="assets/Copia de Mastersupp-icono.ico">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
@@ -31,7 +31,7 @@
                 <img src="assets/color.png" height="100%" alt="">
             </div>
             <div class="cargadoFull" id="cargadoFull">
-                <img src="assets/color.png" height="100%" alt="">
+                <img src="assets/color.png" height="100%" alt="cargado">
             </div>
         </div>
     </div>
