--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1980, initial-scale=1.0">
-    <title>MastersuppVt</title>
+    <title>Mastersupp</title>
     <link rel="icon" href="assets/Copia de Mastersupp-icono.ico">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
@@ -31,7 +31,7 @@
                 <img src="assets/color.png" height="100%" alt="">
             </div>
             <div class="cargadoFull" id="cargadoFull">
-                <img src="assets/color.png" height="100%" alt="cargado">
+                <img src="assets/color.png" height="100%" alt="">
             </div>
         </div>
     </div>
@@ -205,7 +205,7 @@
             <div class="secCuatro">
 
 
-                <article id="secCuatro__text">
+                <article id="text">
                     <p class="parrafo">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex dolores enim a nemo, temporibus
                         culpa
@@ -219,7 +219,7 @@
                         <a class="btmSubmit" href="www.Mastersupp.cl/Download/IOS">iOs</a>
                     </div>
                 </article>
-                <img class="secCuatro__img" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
+                <img id="imagen3" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
             </div>
         </section>
         <section class="esteNo">
@@ -254,7 +254,7 @@
                 </p>
 
                 <article>
-                    <p id="secSeis__ofi" class="parrafo">
+                    <p id="ofi" class="parrafo">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla atque error quo mollitia
                         repellendus
                         itaque,
@@ -270,7 +270,7 @@
                         tempora sed expedita officia!
                     </p>
                 </article>
-                <div id="secSeis__iconos">
+                <div id="iconos">
                     <img src="assets/Twitter-Logotipo-2012–presente.png" alt="icono mastersupp" width="64" height="64"
                         title="Icono"><img src="assets/face.png" alt="icono mastersupp" width="64" height="64"
                         title="Icono">
@@ -291,7 +291,7 @@
                 </p>
 
                 <div>
-                    <iframe class="secSiete__iframe"
+                    <iframe
                         src="https://calendar.google.com/calendar/embed?src=6gkoc737noh2lnup5ootde94cc%40group.calendar.google.com&ctz=America%2FSantiago"
                         style="border: 0" frameborder="0" scrolling="no"></iframe>
                 </div>
@@ -305,17 +305,17 @@
                     Sponsors
                 </p>
 
-                <div class="secOcho__listFull">
+                <div class="listFull">
 
-                    <img class="secOcho__img" src="assets/sponsor.jpg" alt="icono mastersupp" title="Icono">
+                    <img src="assets/sponsor.jpg" alt="icono mastersupp" title="Icono">
 
-                    <img class="secOcho__img" src="assets/sponsor.jpg" alt="icono mastersupp" title="Icono">
+                    <img src="assets/sponsor.jpg" alt="icono mastersupp" title="Icono">
 
-                    <img class="secOcho__img" src="assets/sponsor.jpg" alt="icono mastersupp" title="Icono">
+                    <img src="assets/sponsor.jpg" alt="icono mastersupp" title="Icono">
 
-                    <img class="secOcho__img" src="assets/sponsor.jpg" alt="icono mastersupp" title="Icono">
+                    <img src="assets/sponsor.jpg" alt="icono mastersupp" title="Icono">
 
-                    <img class="secOcho__img" src="assets/sponsor.jpg" alt="icono mastersupp" title="Icono">
+                    <img src="assets/sponsor.jpg" alt="icono mastersupp" title="Icono">
 
                 </div>
             </div>
