--- a/social.html
+++ b/social.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Social</title>
     <link rel="icon" href="assets/Copia de Mastersupp-icono.ico">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
 </head>
@@ -89,10 +89,10 @@
             <div class="redesS">
                 <p class="subTitle">Visitanos en Facebook y YouTube</p>
                 <a title="Mastersupp Channel" href="https://www.youtube.com/channel/UC81ClcDZYSLK-FDGbDIBcOw">
-                    <img class="redesS__img" src="assets/ytP.png" width="100%" height="100%" alt="faceP">
+                    <img src="assets/ytP.png" width="100%" height="100%" alt="faceP">
                 </a>
                 <a href="https://www.facebook.com/mastersuppvT" title="Mastersupp Facebook">
-                    <img class="redesS__img" src="assets/faceP.png" width="100%" height="100%" alt="ytP">
+                    <img src="assets/faceP.png" width="100%" height="100%" alt="ytP">
                 </a>
             </div>
         </div>
