--- a/media.html
+++ b/media.html
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -132,7 +132,7 @@
             </div>
         </div>
         <div class="ventana">
-            <div class="ventana__videoplayer1" id="videoplayer1">
+            <div class="videoplayer1" id="videoplayer1">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/crBtGaM7YE0"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -140,28 +140,28 @@
                 <a href="#close"><img src="assets/close.png" class="closeBtm"></a>
 
             </div>
-            <div class="ventana__videoplayer2" id="videoplayer2">
+            <div class="videoplayer2" id="videoplayer2">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/smFgDJO526E"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
                 <a href="#close"><img src="assets/close.png" class="closeBtm"></a>
             </div>
-            <div class="ventana__videoplayer3" id="videoplayer3">
+            <div class="videoplayer3" id="videoplayer3">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DR278P-3tDE"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
                 <a href="#close"><img src="assets/close.png" class="closeBtm"></a>
             </div>
-            <div class="ventana__videoplayer4" id="videoplayer4">
+            <div class="videoplayer4" id="videoplayer4">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/yk6FPBiiGzw"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
                 <a href="#close"><img src="assets/close.png" class="closeBtm"></a>
             </div>
-            <div class="ventana__videoplayer5" id="videoplayer5">
+            <div class="videoplayer5" id="videoplayer5">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S29eeqVA3vA"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -169,7 +169,7 @@
                 <a href="#close"><img src="assets/close.png" class="closeBtm"></a>
 
             </div>
-            <div class="ventana__videoplayer6" id="videoplayer6">
+            <div class="videoplayer6" id="videoplayer6">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Wod_lCH3biM"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -177,7 +177,7 @@
                 <a href="#close"><img src="assets/close.png" class="closeBtm"></a>
 
             </div>
-            <div class="ventana__videoplayer7" id="videoplayer7">
+            <div class="videoplayer7" id="videoplayer7">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QX7ZmsoqYqQ"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -185,7 +185,7 @@
                 <a href="#close"><img src="assets/close.png" class="closeBtm"></a>
 
             </div>
-            <div class="ventana__videoplayer8" id="videoplayer8">
+            <div class="videoplayer8" id="videoplayer8">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DVI08vh1gDI"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -199,7 +199,7 @@
             <h1 class="subTitle">
                 POKÉMON FAVORITOS
             </h1>
-            <div class="pokes__contenedorPokes">
+            <div class="contenedorPokes">
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
@@ -231,81 +231,81 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="pokes__imgPoke" src="GIF/cinderace-gigantamax-s.gif" alt="GIF" title="cinderace">
+                            <img class="imgPoke" src="GIF/cinderace-gigantamax-s.gif" alt="GIF" title="cinderace">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="pokes__h5">Cinderace</h5>
+                                <h5>Cinderace</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="pokes__imgPoke" src="GIF/dragapult-s.gif" alt="GIF" title="cinderace">
+                            <img class="imgPoke" src="GIF/dragapult-s.gif" alt="GIF" title="cinderace">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="pokes__h5">Dragapult</h5>
+                                <h5>Dragapult</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="pokes__imgPoke" src="GIF/garchomp.gif" alt="GIF" title="cinderace">
+                            <img class="imgPoke" src="GIF/garchomp.gif" alt="GIF" title="cinderace">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="pokes__h5">Garchomp</h5>
+                                <h5>Garchomp</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="pokes__imgPoke" src="GIF/porygon2.gif" alt="GIF" title="cinderace">
+                            <img class="imgPoke" src="GIF/porygon2.gif" alt="GIF" title="cinderace">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="pokes__h5">Porygon-2</h5>
+                                <h5>Porygon-2</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="pokes__imgPoke" src="GIF/sylveon-s.gif" alt="GIF" title="cinderace">
+                            <img class="imgPoke" src="GIF/sylveon-s.gif" alt="GIF" title="cinderace">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="pokes__h5">Sylveon</h5>
+                                <h5>Sylveon</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="pokes__imgPoke" src="GIF/topapex-s.gif" alt="GIF" title="cinderace">
+                            <img class="imgPoke" src="GIF/topapex-s.gif" alt="GIF" title="cinderace">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="pokes__h5">Toxapex</h5>
+                                <h5>Toxapex</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="pokes__imgPoke" src="GIF/torkoal.gif" alt="GIF" title="cinderace">
+                            <img class="imgPoke" src="GIF/torkoal.gif" alt="GIF" title="cinderace">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="pokes__h5">Torkoal</h5>
+                                <h5>Torkoal</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="pokes__imgPoke" src="GIF/umbreon-s.gif" alt="GIF" title="cinderace">
+                            <img class="imgPoke" src="GIF/umbreon-s.gif" alt="GIF" title="cinderace">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="pokes__h5">Umbreon</h5>
+                                <h5>Umbreon</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="pokes__imgPoke" src="GIF/ushifu-gigantamax.gif" alt="GIF" title="cinderace">
+                            <img class="imgPoke" src="GIF/ushifu-gigantamax.gif" alt="GIF" title="cinderace">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="pokes__h5">Urshifu</h5>
+                                <h5>Urshifu</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="pokes__imgPoke" src="GIF/venusaur-gigantamax.gif" alt="GIF" title="cinderace">
+                            <img class="imgPoke" src="GIF/venusaur-gigantamax.gif" alt="GIF" title="cinderace">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="pokes__h5">Venusaur</h5>
+                                <h5>Venusaur</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="pokes__imgPoke" src="GIF/whimsicott.gif" alt="GIF" title="cinderace">
+                            <img class="imgPoke" src="GIF/whimsicott.gif" alt="GIF" title="cinderace">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="pokes__h5">Whimsicott</h5>
+                                <h5>Whimsicott</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="pokes__imgPoke" src="GIF/yveltal.gif" alt="GIF" title="cinderace">
+                            <img class="imgPoke" src="GIF/yveltal.gif" alt="GIF" title="cinderace">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="pokes__h5">Yveltal</h5>
+                                <h5>Yveltal</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="pokes__imgPoke" src="GIF/zapdos-galar.gif" alt="GIF" title="cinderace">
+                            <img class="imgPoke" src="GIF/zapdos-galar.gif" alt="GIF" title="cinderace">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="pokes__h5">Zapdos de Galar</h5>
+                                <h5>Zapdos de Galar</h5>
                             </div>
                         </div>
                     </div>
