--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=1980, initial-scale=1.0">
     <title>News</title>
     <link rel="icon" href="assets/Copia de Mastersupp-icono.ico">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
@@ -61,10 +61,10 @@
         <h1 class="titMedia">NEWS</h1>
         <section>
             <div class="secUno">
-                <img class="secUno__img" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
-                <div class="secUno__pRespuesta">
+                <img class="img" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
+                <div class="pRespuesta">
 
-                    <p class="secUno__subTitle">
+                    <p class="subTitle">
                         Noticia 1
                     </p>
 
@@ -90,9 +90,9 @@
 
             <div class="secDos">
 
-                <DIv class="secDos__sobre">
+                <DIv class="sobre">
 
-                    <p class="secDos__subTitle">
+                    <p class="subTitle">
                         Noticia 2
                     </p>
 
@@ -112,17 +112,17 @@
 
 
                 </DIv>
-                <img id="secDos__imagen" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
+                <img id="imagen2" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
             </div>
         </section>
 
         <section>
             <div class="secUno">
-                <img class="secUno__img" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
-                <div class="secUno__pRespuesta">
+                <img class="img" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
+                <div class="pRespuesta">
 
-                    <p class="secUno__subTitle">
-                        Noticia 1
+                    <p class="subTitle">
+                        Noticia 3
                     </p>
 
                     <article>
@@ -147,10 +147,10 @@
 
             <div class="secDos">
 
-                <DIv class="secDos__sobre">
+                <DIv class="sobre">
 
-                    <p class="secDos__subTitle">
-                        Noticia 2
+                    <p class="subTitle">
+                        Noticia 4
                     </p>
 
                     <article>
@@ -169,10 +169,9 @@
 
 
                 </DIv>
-                <img id="secDos__imagen" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
+                <img id="imagen2" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
             </div>
         </section>
-
 
         <footer>
             <div class="pie">
