--- a/donate.html
+++ b/donate.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Donate</title>
     <link rel="icon" href="assets/Copia de Mastersupp-icono.ico">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
 </head>
