--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta name="description" content="El Vtuber latino mas manco del mundo, ven y diviertete">
-    <meta name="keywords" content="mastersupp,mastersupptv,vtuber,latino,youtuber,vitrual,ver vtuber,vtuber pokemon unite">
+    <meta name="keywords"
+        content="mastersupp,mastersupptv,vtuber,latino,youtuber,vitrual,ver vtuber,vtuber pokemon unite">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1980, initial-scale=1.0">
@@ -71,14 +72,10 @@
                     </video>
                 </div>
                 <div class="enunciado1">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam libero, sapiente maiores
-                        fugit
-                        accusamus
-                        sequi.
+                    <p>El Vtuber latino mas manco del mundo, ven y diviertete
                     </p>
                     <p id="titulo">
-                        "MASTERSUPP PROYECT"
+                        "MASTERSUPPVT"
                     </p>
                 </div>
             </div>
@@ -88,25 +85,21 @@
         </header>
         <section>
             <div class="secUno">
-                <img class="img" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
+                <img class="img" src="assets/q&a.png" alt="preguntas y respuestas" title="EJEMPLO">
                 <div class="pRespuesta">
 
                     <p class="subTitle">
-                        Q&A
+                        P y R
                     </p>
 
                     <article>
                         <p class="parrafo">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                            Ipsa quasi hic error deleniti, vitae at
-                            similique
-                            rem esse temporibus a
-                            explicabo recusandae optio labore voluptatem rerum, perspiciatis tempore qui
-                            sunt.
+                            Bienvenido a la seccion donde puedes hacerme una pregunta y yo te respondere lo antes
+                            posible, no te olvides de visitar las demas paginas
                         </p>
                     </article>
                     <div class="btmI">
-                        <a class="btmSubmit" href="#contenedorAsk">Ask Me</a>
+                        <a class="btmSubmit" href="#contenedorAsk">Preguntame</a>
                     </div>
                 </div>
 
@@ -154,23 +147,30 @@
         <section>
 
             <div class="secDos">
-                <img id="imagen2" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
+                <img id="imagen2" src="assets/trapitomaster.png" alt="Mi forma femenina" title="forma alternativa">
                 <DIv class="sobre">
 
                     <p class="subTitle">
-                        About Me
+                        Sobre mi
                     </p>
 
                     <article>
                         <p class="parrafo">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa quasi hic error deleniti,
-                            vitae
-                            at
-                            similique
-                            rem esse temporibus a explicabo recusandae optio labore voluptatem rerum, perspiciatis
-                            tempore
-                            qui
-                            sunt.
+                            Bueno soy un semi-dios espiritual que busca llevar alegria a las personas,
+                            ¿que como me volvi un semi-dios? pues, yo era un gato callejero que tenia que luchar para
+                            conseguir que comer, despues de un ataque de perros callejeros y estando al borde de la
+                            muerte, una humana me tomo bajo su cuidado al encontrarte entre los botes de basura gracias
+                            a mis gritos de agonia, me cuido y me enseño con su forma de actuar que la gente en sus
+                            peores momentos necesitas a alguien que este ahi.Lamentablemente esta mujer tenia una
+                            enfermedad terminal y murio, yo nunca intente dejar de hacer felices a las demas personas ya
+                            que ese era el recuerdo de mi mejor amiga y cuando estaba en mi lecho de muerte, escondido,
+                            porque no queria que nadie se pusiera trizte, logre reunirme otra vez con ella.
+                            Despues de mucho tiempo se me dio la oportunidad de ir a recojer las almas de las personas a
+                            las que habia hecho felices y para eso se me dio la capacidad de moverme entre planos
+                            existenciales y la capacidad de cambiar mi forma fisica a voluntad, ahora aprovecho cada
+                            viaje al plano fisico
+                            para tratar de hacer felices a mas personas y asi vean una cara familiar en sus ultimos
+                            momentos y sepan que todo va a estar bien.
                         </p>
                     </article>
                     <div class="btmI">
@@ -187,7 +187,7 @@
             <a href="index.html"><img src="assets/color.png" alt="icono mastersupp" width="64" height="64"
                     title="Icono"></a>
 
-            <a title="Mastersupp Channel" href="https://www.twitch.tv/masterzergsupp">
+            <a title="Mastersupp Channel" href="https://www.twitch.tv/mastersuppvt">
                 <img src="assets/twitch.png" alt="icono twitch" height="64" title="twitch">
             </a>
 
@@ -207,19 +207,14 @@
 
                 <article id="text">
                     <p class="parrafo">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex dolores enim a nemo, temporibus
-                        culpa
-                        iusto
-                        recusandae sapiente mollitia inventore! In dolores eos earum accusantium, perferendis quam qui
-                        quo
-                        nesciunt?
+                        Muy pronto estare haciendo una app para que tengan todo mi contenido en la palma de sus manos
                     </p>
                     <div class="btmS">
-                        <a class="btmSubmit" href="www.Mastersupp.cl/Download/AND">Android</a>
-                        <a class="btmSubmit" href="www.Mastersupp.cl/Download/IOS">iOs</a>
+                        <a class="btmSubmit" href="">Pronto en Android</a>
+                        <a class="btmSubmit" href="">Pronto en iOs</a>
                     </div>
                 </article>
-                <img id="imagen3" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
+                <img id="imagen3" src="assets/phone.png" alt="dispositivo movil" title="s9">
             </div>
         </section>
         <section class="esteNo">
@@ -255,28 +250,16 @@
 
                 <article>
                     <p id="ofi" class="parrafo">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla atque error quo mollitia
-                        repellendus
-                        itaque,
-                        id
-                        ut cumque explicabo vero aliquid molestias excepturi numquam in consequuntur eum dicta tempore
-                        sint.
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, natus cumque blanditiis
-                        cupiditate,
-                        eos
-                        aspernatur voluptates perspiciatis quibusdam voluptatum labore distinctio amet voluptate numquam
-                        quaerat
-                        sunt,
-                        tempora sed expedita officia!
+                        Bienvenido a mis redes sociales no tengas miedo de hablarme o mandarme una solicitud de amistad
+                        :3
                     </p>
                 </article>
                 <div id="iconos">
-                    <img src="assets/Twitter-Logotipo-2012–presente.png" alt="icono mastersupp" width="64" height="64"
-                        title="Icono"><img src="assets/face.png" alt="icono mastersupp" width="64" height="64"
-                        title="Icono">
-                    <img src="assets/reddit-logo-16.png" alt="icono mastersupp" width="64" height="64"
-                        title="Icono"><img src="assets/Instagram_logo_2016.svg.png" alt="icono mastersupp" width="64"
-                        height="64" title="Icono">
+                    <a href="https://twitter.com/MastersuppVt">
+                        <img src="assets/Twitter-Logotipo-2012–presente.png" alt="icono mastersupp" width="64"
+                            height="64" title="Icono"></a>
+                    <a href="https://www.facebook.com/mastersuppvT">
+                        <img src="assets/face.png" alt="icono mastersupp" width="64" height="64" title="Icono"></a>
                 </div>
 
             </div>
@@ -335,7 +318,7 @@
 
         </footer>
     </div>
-   
+
     <script src="scripts.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
 </body>
