--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=1980, initial-scale=1.0">
     <title>News</title>
     <link rel="icon" href="assets/Copia de Mastersupp-icono.ico">
-    <link rel="stylesheet" href="css/styles.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -58,24 +59,20 @@
 
 
         </header>
-        <h1 class="titMedia">NEWS</h1>
+        <h1 class="titMedia">NOTICIAS</h1>
         <section>
             <div class="secUno">
-                <img class="img" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
+                <img class="img" src="assets/ajolote.png" alt="Logo team" title="Logo team">
                 <div class="pRespuesta">
 
                     <p class="subTitle">
-                        Noticia 1
+                        Formacion de Ajolote Supremacy
                     </p>
 
                     <article>
                         <p class="parrafo">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                            Ipsa quasi hic error deleniti, vitae at
-                            similique
-                            rem esse temporibus a
-                            explicabo recusandae optio labore voluptatem rerum, perspiciatis tempore qui
-                            sunt.
+                            Hace un tiempo atras forme el team competitivo de pokemon unite llamado "Ajolote Supremacy"
+                            con el cual se hacen entrenamientos regulares 5 veces por semana
                         </p>
                     </article>
 
@@ -93,46 +90,36 @@
                 <DIv class="sobre">
 
                     <p class="subTitle">
-                        Noticia 2
+                        Serie de Blade: the edge of the darkness
                     </p>
 
                     <article>
                         <p class="parrafo">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa quasi hic error deleniti,
-                            vitae
-                            at
-                            similique
-                            rem esse temporibus a explicabo recusandae optio labore voluptatem rerum, perspiciatis
-                            tempore
-                            qui
-                            sunt.
+                            Recien habiendo pasado la tumba de ephyria nos adentramos en la nueva busqueda para alcanzar
+                            la paz
                         </p>
                     </article>
 
 
 
                 </DIv>
-                <img id="imagen2" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
+                <img id="imagen2" src="assets/blade.png" alt="blade" title="blade">
             </div>
         </section>
 
         <section>
             <div class="secUno">
-                <img class="img" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
+                <img class="img" src="assets/guiapokemon.png" alt="guia pokemon" title="guia">
                 <div class="pRespuesta">
 
                     <p class="subTitle">
-                        Noticia 3
+                        Guias pokemon
                     </p>
 
                     <article>
                         <p class="parrafo">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                            Ipsa quasi hic error deleniti, vitae at
-                            similique
-                            rem esse temporibus a
-                            explicabo recusandae optio labore voluptatem rerum, perspiciatis tempore qui
-                            sunt.
+                            En poco tiempo mas estare trayendo guias de todos los pokemon jugables en pokemon unite
+                            esten atentos que se vienen otras sorpresas
                         </p>
                     </article>
 
@@ -150,26 +137,20 @@
                 <DIv class="sobre">
 
                     <p class="subTitle">
-                        Noticia 4
+                        La creacion de la pagina web
                     </p>
 
                     <article>
                         <p class="parrafo">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa quasi hic error deleniti,
-                            vitae
-                            at
-                            similique
-                            rem esse temporibus a explicabo recusandae optio labore voluptatem rerum, perspiciatis
-                            tempore
-                            qui
-                            sunt.
+                            Actualmente estoy en busqueda de un dominio para migrar esta pagina web de github y tener
+                            nuestra direccion url mas limpia y bonita
                         </p>
                     </article>
 
 
 
                 </DIv>
-                <img id="imagen2" src="assets/EJEMPLO.jpg" alt="EJEMPLO" title="EJEMPLO">
+                <img id="imagen2" src="assets/inicios.png" alt="prototipado" title="prototipado">
             </div>
         </section>
 
