--- a/donate.html
+++ b/donate.html
@@ -61,7 +61,7 @@
                     Haz tu donacion
                 </h1>
                 <div>
-                    <form action="#" class="form">
+                    <form action="#" class="form" id="formDonate">
                         <div class="formheader">
                             <h1 class="formTitle">
                                 T<span>us datos</span>
