--- a/donate.html
+++ b/donate.html
@@ -92,6 +92,10 @@
 
             </div>
         </div>
+        <div>
+            <ul id="donadores">
+            </ul>
+        </div>
 
         <section class="esteMenos">
             <div></div>
