--- a/donate.html
+++ b/donate.html
@@ -84,7 +84,7 @@
                         <textarea name="mensaje" id="texA" cols="30" rows="10"
                             placeholder="hola, ¿como estas?..."></textarea>
                         <div class="btmS">
-                            <input type="submit" class="btmSubmit" value="Donar">
+                            <input type="submit" id="btmSubmit" class="btmSubmit" value="Donar">
                             <input type="reset" class="btmReset" value="Borrar todo">
                         </div>
                     </form>
@@ -116,6 +116,7 @@
         </footer>
     </div>
 
+    <script src = "https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts.js"></script>
 </body>
 
