--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
         </footer>
     </div>
-
+    <script src = "https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
 </body>
