--- a/donate.html
+++ b/donate.html
@@ -60,6 +60,13 @@
                 <h1 class="subTitle">
                     Haz tu donacion
                 </h1>
+                <div class="dolar">
+                    <h2>
+                        Valor dolar a pesos chilenos
+                    </h2>
+                    <p class="val"></p>
+                </div>
+               
                 <div>
                     <form action="#" class="form" id="formDonate">
                         <div class="formheader">
